// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Location List Component Test should render correctly with few routes 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocationList
    distance="10"
    domicileId={1}
    loadHandler={[Function]}
    removeHandler={[Function]}
    route={
        Array [
            Object {
              "id": 1,
              "lat": 1.345678,
              "lng": 1.345678,
            },
            Object {
              "id": 2,
              "lat": 2.345678,
              "lng": 2.345678,
            },
            Object {
              "id": 3,
              "lat": 3.676111,
              "lng": 3.568333,
            },
          ]
    }
    selectHandler={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="leaflet-control leaflet-bar w5 bg-white"
>
        <div>
                <div
                        className="tl ma2 pa2"
                >
                        Distance: 
                        10
                </div>
                <div
                        className="tl ma2 pa2"
                >
                        Locations: 
                        3
                </div>
                <div
                        style={
                                Object {
                                        "maxHeight": "calc(100vh - 116px)",
                                        "overflowY": "auto",
                                      }
                        }
                >
                        <Location
                                id={1}
                                removeDisabled={true}
                                removeHandler={[Function]}
                                selectHandler={[Function]}
                        />
                        <Location
                                id={2}
                                removeDisabled={false}
                                removeHandler={[Function]}
                                selectHandler={[Function]}
                        />
                        <Location
                                id={3}
                                removeDisabled={false}
                                removeHandler={[Function]}
                                selectHandler={[Function]}
                        />
                </div>
        </div>
</div>,
      "className": "leaflet-top leaflet-left leaflet-touch",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <div
                    className="tl ma2 pa2"
          >
                    Distance: 
                    10
          </div>
          <div
                    className="tl ma2 pa2"
          >
                    Locations: 
                    3
          </div>
          <div
                    style={
                              Object {
                                        "maxHeight": "calc(100vh - 116px)",
                                        "overflowY": "auto",
                                      }
                    }
          >
                    <Location
                              id={1}
                              removeDisabled={true}
                              removeHandler={[Function]}
                              selectHandler={[Function]}
                    />
                    <Location
                              id={2}
                              removeDisabled={false}
                              removeHandler={[Function]}
                              selectHandler={[Function]}
                    />
                    <Location
                              id={3}
                              removeDisabled={false}
                              removeHandler={[Function]}
                              selectHandler={[Function]}
                    />
          </div>
</div>,
        "className": "leaflet-control leaflet-bar w5 bg-white",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="tl ma2 pa2"
>
              Distance: 
              10
</div>,
            <div
              className="tl ma2 pa2"
>
              Locations: 
              3
</div>,
            <div
              style={
                            Object {
                                          "maxHeight": "calc(100vh - 116px)",
                                          "overflowY": "auto",
                                        }
              }
>
              <Location
                            id={1}
                            removeDisabled={true}
                            removeHandler={[Function]}
                            selectHandler={[Function]}
              />
              <Location
                            id={2}
                            removeDisabled={false}
                            removeHandler={[Function]}
                            selectHandler={[Function]}
              />
              <Location
                            id={3}
                            removeDisabled={false}
                            removeHandler={[Function]}
                            selectHandler={[Function]}
              />
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Distance: ",
                "10",
              ],
              "className": "tl ma2 pa2",
            },
            "ref": null,
            "rendered": Array [
              "Distance: ",
              "10",
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Locations: ",
                3,
              ],
              "className": "tl ma2 pa2",
            },
            "ref": null,
            "rendered": Array [
              "Locations: ",
              3,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Location
                  id={1}
                  removeDisabled={true}
                  removeHandler={[Function]}
                  selectHandler={[Function]}
/>,
                <Location
                  id={2}
                  removeDisabled={false}
                  removeHandler={[Function]}
                  selectHandler={[Function]}
/>,
                <Location
                  id={3}
                  removeDisabled={false}
                  removeHandler={[Function]}
                  selectHandler={[Function]}
/>,
              ],
              "style": Object {
                "maxHeight": "calc(100vh - 116px)",
                "overflowY": "auto",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "function",
                "props": Object {
                  "id": 1,
                  "removeDisabled": true,
                  "removeHandler": [Function],
                  "selectHandler": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "function",
                "props": Object {
                  "id": 2,
                  "removeDisabled": false,
                  "removeHandler": [Function],
                  "selectHandler": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "3",
                "nodeType": "function",
                "props": Object {
                  "id": 3,
                  "removeDisabled": false,
                  "removeHandler": [Function],
                  "selectHandler": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="leaflet-control leaflet-bar w5 bg-white"
>
          <div>
                    <div
                              className="tl ma2 pa2"
                    >
                              Distance: 
                              10
                    </div>
                    <div
                              className="tl ma2 pa2"
                    >
                              Locations: 
                              3
                    </div>
                    <div
                              style={
                                        Object {
                                                  "maxHeight": "calc(100vh - 116px)",
                                                  "overflowY": "auto",
                                                }
                              }
                    >
                              <Location
                                        id={1}
                                        removeDisabled={true}
                                        removeHandler={[Function]}
                                        selectHandler={[Function]}
                              />
                              <Location
                                        id={2}
                                        removeDisabled={false}
                                        removeHandler={[Function]}
                                        selectHandler={[Function]}
                              />
                              <Location
                                        id={3}
                                        removeDisabled={false}
                                        removeHandler={[Function]}
                                        selectHandler={[Function]}
                              />
                    </div>
          </div>
</div>,
        "className": "leaflet-top leaflet-left leaflet-touch",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <div
                        className="tl ma2 pa2"
            >
                        Distance: 
                        10
            </div>
            <div
                        className="tl ma2 pa2"
            >
                        Locations: 
                        3
            </div>
            <div
                        style={
                                    Object {
                                                "maxHeight": "calc(100vh - 116px)",
                                                "overflowY": "auto",
                                              }
                        }
            >
                        <Location
                                    id={1}
                                    removeDisabled={true}
                                    removeHandler={[Function]}
                                    selectHandler={[Function]}
                        />
                        <Location
                                    id={2}
                                    removeDisabled={false}
                                    removeHandler={[Function]}
                                    selectHandler={[Function]}
                        />
                        <Location
                                    id={3}
                                    removeDisabled={false}
                                    removeHandler={[Function]}
                                    selectHandler={[Function]}
                        />
            </div>
</div>,
          "className": "leaflet-control leaflet-bar w5 bg-white",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="tl ma2 pa2"
>
                Distance: 
                10
</div>,
              <div
                className="tl ma2 pa2"
>
                Locations: 
                3
</div>,
              <div
                style={
                                Object {
                                                "maxHeight": "calc(100vh - 116px)",
                                                "overflowY": "auto",
                                              }
                }
>
                <Location
                                id={1}
                                removeDisabled={true}
                                removeHandler={[Function]}
                                selectHandler={[Function]}
                />
                <Location
                                id={2}
                                removeDisabled={false}
                                removeHandler={[Function]}
                                selectHandler={[Function]}
                />
                <Location
                                id={3}
                                removeDisabled={false}
                                removeHandler={[Function]}
                                selectHandler={[Function]}
                />
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Distance: ",
                  "10",
                ],
                "className": "tl ma2 pa2",
              },
              "ref": null,
              "rendered": Array [
                "Distance: ",
                "10",
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Locations: ",
                  3,
                ],
                "className": "tl ma2 pa2",
              },
              "ref": null,
              "rendered": Array [
                "Locations: ",
                3,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Location
                    id={1}
                    removeDisabled={true}
                    removeHandler={[Function]}
                    selectHandler={[Function]}
/>,
                  <Location
                    id={2}
                    removeDisabled={false}
                    removeHandler={[Function]}
                    selectHandler={[Function]}
/>,
                  <Location
                    id={3}
                    removeDisabled={false}
                    removeHandler={[Function]}
                    selectHandler={[Function]}
/>,
                ],
                "style": Object {
                  "maxHeight": "calc(100vh - 116px)",
                  "overflowY": "auto",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "function",
                  "props": Object {
                    "id": 1,
                    "removeDisabled": true,
                    "removeHandler": [Function],
                    "selectHandler": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "function",
                  "props": Object {
                    "id": 2,
                    "removeDisabled": false,
                    "removeHandler": [Function],
                    "selectHandler": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "3",
                  "nodeType": "function",
                  "props": Object {
                    "id": 3,
                    "removeDisabled": false,
                    "removeHandler": [Function],
                    "selectHandler": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Location List Component Test should render correctly with no routes 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocationList
    distance="10"
    domicileId={1}
    loadHandler={[Function]}
    removeHandler={[Function]}
    route={Array []}
    selectHandler={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="leaflet-control leaflet-bar w5 bg-white"
>
        <div
                className="tc ma2"
        >
                <div>
                        Click map to add locations
                </div>
                <div>
                        or 
                        <button
                                onClick={[Function]}
                                style={
                                        Object {
                                                "width": "100%",
                                              }
                                }
                        >
                                Load 40 European cities
                        </button>
                </div>
        </div>
</div>,
      "className": "leaflet-top leaflet-left leaflet-touch",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="tc ma2"
>
          <div>
                    Click map to add locations
          </div>
          <div>
                    or 
                    <button
                              onClick={[Function]}
                              style={
                                        Object {
                                                  "width": "100%",
                                                }
                              }
                    >
                              Load 40 European cities
                    </button>
          </div>
</div>,
        "className": "leaflet-control leaflet-bar w5 bg-white",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              Click map to add locations
</div>,
            <div>
              or 
              <button
                            onClick={[Function]}
                            style={
                                          Object {
                                                        "width": "100%",
                                                      }
                            }
              >
                            Load 40 European cities
              </button>
</div>,
          ],
          "className": "tc ma2",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Click map to add locations",
            },
            "ref": null,
            "rendered": "Click map to add locations",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "or ",
                <button
                  onClick={[Function]}
                  style={
                                    Object {
                                                      "width": "100%",
                                                    }
                  }
>
                  Load 40 European cities
</button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "or ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Load 40 European cities",
                  "onClick": [Function],
                  "style": Object {
                    "width": "100%",
                  },
                },
                "ref": null,
                "rendered": "Load 40 European cities",
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="leaflet-control leaflet-bar w5 bg-white"
>
          <div
                    className="tc ma2"
          >
                    <div>
                              Click map to add locations
                    </div>
                    <div>
                              or 
                              <button
                                        onClick={[Function]}
                                        style={
                                                  Object {
                                                            "width": "100%",
                                                          }
                                        }
                              >
                                        Load 40 European cities
                              </button>
                    </div>
          </div>
</div>,
        "className": "leaflet-top leaflet-left leaflet-touch",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="tc ma2"
>
            <div>
                        Click map to add locations
            </div>
            <div>
                        or 
                        <button
                                    onClick={[Function]}
                                    style={
                                                Object {
                                                            "width": "100%",
                                                          }
                                    }
                        >
                                    Load 40 European cities
                        </button>
            </div>
</div>,
          "className": "leaflet-control leaflet-bar w5 bg-white",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                Click map to add locations
</div>,
              <div>
                or 
                <button
                                onClick={[Function]}
                                style={
                                                Object {
                                                                "width": "100%",
                                                              }
                                }
                >
                                Load 40 European cities
                </button>
</div>,
            ],
            "className": "tc ma2",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Click map to add locations",
              },
              "ref": null,
              "rendered": "Click map to add locations",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "or ",
                  <button
                    onClick={[Function]}
                    style={
                                        Object {
                                                            "width": "100%",
                                                          }
                    }
>
                    Load 40 European cities
</button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "or ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Load 40 European cities",
                    "onClick": [Function],
                    "style": Object {
                      "width": "100%",
                    },
                  },
                  "ref": null,
                  "rendered": "Load 40 European cities",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
